default-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
    - host: hello-py.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-py-ext
                port:
                  number: 80

          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: hello-py-ext
                port:
                  number: 80
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: hello-py-ext
                port:
                  number: 80
